--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>lt.mif.vu</groupId>
-  <artifactId>java-ee-practice</artifactId>
+  <groupId>MIF</groupId>
+  <artifactId>VU</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
@@ -55,10 +55,15 @@
       <artifactId>mybatis-cdi</artifactId>
       <version>1.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.omnifaces</groupId>
+      <artifactId>omnifaces</artifactId>
+      <version>2.0</version>
+    </dependency>
   </dependencies>
 
   <build>
-    <finalName>java-ee-practice</finalName>
+    <finalName>MIF</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
