--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,20 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <deltaspike.version>1.7.2</deltaspike.version>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.apache.deltaspike.distribution</groupId>
+        <artifactId>distributions-bom</artifactId>
+        <version>${deltaspike.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
     <dependency>
@@ -60,6 +73,17 @@
     <artifactId>omnifaces</artifactId>
     <version>2.0</version>
   </dependency>
+    <!-- DeltaSpike CORE -->
+    <dependency>
+      <groupId>org.apache.deltaspike.core</groupId>
+      <artifactId>deltaspike-core-api</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.deltaspike.core</groupId>
+      <artifactId>deltaspike-core-impl</artifactId>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 
   <build>
